Added public path to file links

--- a/README.ipynb
+++ b/README.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "`df.plot_animated()`\n",
     "\n",
-    "![Example Bar Chart](examples/example-barh-chart.gif)"
+    "![Example Bar Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-barh-chart.gif)"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Electricity Example Line Chart](examples/example-electricity-generated-australia.gif)"
+    "![Electricity Example Line Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-electricity-generated-australia.gif)"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Summary Func Example](examples/summary-func-example.gif)"
+    "![Summary Func Example](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/summary-func-example.gif)"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Fixed Example](examples/fixed-example.gif)"
+    "![Fixed Example](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/fixed-example.gif)"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Perpendicular Example](examples/perpendicular-example.gif)"
+    "![Perpendicular Example](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/perpendicular-example.gif)"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Barv Chart](examples/example-barv-chart.gif)"
+    "![Example Barv Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-barv-chart.gif)"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Line Chart](examples/example-line-chart.gif)\n"
+    "![Example Line Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-line-chart.gif)\n"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Bar Chart](examples/example-bar-chart.gif)"
+    "![Example Bar Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-bar-chart.gif)"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Scatter Chart](examples/example-scatter-chart.gif)"
+    "![Example Scatter Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-scatter-chart.gif)"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Pie Chart](examples/example-pie-chart.gif)"
+    "![Example Pie Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-pie-chart.gif)"
    ]
   },
   {
@@ -371,7 +371,7 @@
    "metadata": {},
    "source": [
     "#### Bubble Chart Example 1\n",
-    "![Bubble Chart Example](examples/example-bubble-chart.gif)"
+    "![Bubble Chart Example](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-bubble-chart.gif)"
    ]
   },
   {
@@ -379,9 +379,9 @@
    "metadata": {},
    "source": [
     "#### Bubble Chart Example 2\n",
-    "Jupyter notebook: [pendulum_sample.ipynb](examples/test_notebooks/pendulum_sample.ipynb)\n",
+    "Jupyter notebook: [pendulum_sample.ipynb](https://github.com/JackMcKew/pandas_alive/blob/main/examples/test_notebooks/pendulum_sample.ipynb)\n",
     "\n",
-    "![Bubble Chart Example](examples/test_notebooks/pend-bubble.gif)"
+    "![Bubble Chart Example](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/test_notebooks/pend-bubble.gif)"
    ]
   },
   {
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Point GeoSpatialChart](examples/example-geo-point-chart.gif)"
+    "![Example Point GeoSpatialChart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-geo-point-chart.gif)"
    ]
   },
   {
@@ -459,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Polygon GeoSpatialChart](examples/example-geo-polygon-chart.gif)"
+    "![Example Polygon GeoSpatialChart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-geo-polygon-chart.gif)"
    ]
   },
   {
@@ -497,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Example Bar & Line Chart](examples/example-bar-and-line-chart.gif)"
+    "![Example Bar & Line Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-bar-and-line-chart.gif)"
    ]
   },
   {
@@ -535,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Urban Population Bar & Line Chart](examples/example-bar-and-line-urban-chart.gif)\n"
+    "![Urban Population Bar & Line Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/example-bar-and-line-urban-chart.gif)\n"
    ]
   },
   {
@@ -605,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Life Expectancy Chart](examples/life-expectancy.gif)"
+    "![Life Expectancy Chart](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/life-expectancy.gif)"
    ]
   },
   {
@@ -763,7 +763,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![NSW COVID](examples/nsw-covid.gif)"
+    "![NSW COVID](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/nsw-covid.gif)"
    ]
   },
   {
@@ -896,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Italy COVID](examples/italy-covid.gif)"
+    "![Italy COVID](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/italy-covid.gif)"
    ]
   },
   {
@@ -904,9 +904,9 @@
    "metadata": {},
    "source": [
     "### Simple Pendulum Motion\n",
-    "Jupyter notebook: [pendulum_sample.ipynb](examples/test_notebooks/pendulum_sample.ipynb)\n",
+    "Jupyter notebook: [pendulum_sample.ipynb](https://github.com/JackMcKew/pandas_alive/blob/main/examples/test_notebooks/pendulum_sample.ipynb)\n",
     "\n",
-    "![Bubble Chart Example](examples/test_notebooks/pend-combined-2.gif)"
+    "![Bubble Chart Example](https://raw.githubusercontent.com/JackMcKew/pandas_alive/main/examples/test_notebooks/pend-combined-2.gif)"
    ]
   },
   {
@@ -994,7 +994,7 @@
     "\n",
     "- <https://jackmckew.dev/creating-animated-plots-with-pandas_alive.html>\n",
     "- <https://jackmckew.dev/geopandas-and-pandas-alive.html>\n",
-    "- Jupyter notebooks in [test_notebooks](./examples/test_notebooks/).\n",
+    "- Jupyter notebooks in [test_notebooks](https://github.com/JackMcKew/pandas_alive/tree/main/examples/test_notebooks) folder.\n",
     "\n",
     "## Inspiration\n",
     "\n",
@@ -1029,18 +1029,18 @@
     "\n",
     "To get started in development, clone a copy of this repository to your PC. This will now enable you to create a Jupyter notebook or a standalone `.py` file, and import `pandas_alive` as a local module. Now you can create new chart types in `pandas_alive/charts.py` or `pandas_alive/geocharts.py` to build to your hearts content!\n",
     "\n",
-    "For Python packages for a development environment check [requirements.txt](./requirements.txt) if using `PIP`, or [py38-pandas_alive.yml](./py38-pandas_alive.yml) if using `conda`.\n",
+    "For Python packages for a development environment check [requirements.txt](https://github.com/JackMcKew/pandas_alive/blob/main/requirements.txt) if using `PIP`, or [py38-pandas_alive.yml](https://github.com/JackMcKew/pandas_alive/blob/main/py38-pandas_alive.yml) if using `conda`.\n",
     "\n",
     "If you are using `conda` and are new to setting up environments for collaboration on projects, here are some notes from a previous contributor using `conda`: [Python set up with conda for project collaboration](https://github.com/JackMcKew/pandas_alive/issues/11#issuecomment-691663712)\n",
     "\n",
-    "If you wish to contribute new Jupyter notebooks with different application examples, please place them in this directory: `./examples/test_notebooks/`."
+    "If you wish to contribute new Jupyter notebooks with different application examples, please place them in this directory: [./examples/test_notebooks/](https://github.com/JackMcKew/pandas_alive/tree/main/examples/test_notebooks)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Changelog](CHANGELOG.md)"
+    "## [Changelog](https://github.com/JackMcKew/pandas_alive/blob/main/CHANGELOG.md)"
    ]
   }
  ],
